# phoenix-cli

./: .gitignore  Cargo.toml  README.md  clear_registry_start.sh  foo.csv  phoenix-cli-install.sh  transaction_history.csv
.github/workflows/: build.yml
src/: command.rs  main.rs  processor.rs  token_registry.rs  utils.rs
src/helpers/: csv_helpers.rs  devnet_helpers.rs  market_helpers.rs  mod.rs  print_helpers.rs
src/lib/: lib.rs
src/lib/helpers/: devnet_helpers.rs  market_helpers.rs  mod.rs  print_helpers.rs
src/lib/processor/: mod.rs  process_claim_seat.rs  process_evict_seat.rs  process_get_all_markets.rs  process_get_book_levels.rs  process_get_full_book.rs  process_get_market.rs  process_get_market_status.rs  process_get_open_orders.rs  process_get_seat_info.rs  process_get_seat_manager_info.rs  process_get_top_of_book.rs  process_get_traders_for_market.rs  process_get_transaction.rs  process_get_uncollected_revenue.rs  process_mint_tokens_for_market.rs  process_request_seat.rs
src/processor/: mod.rs  process_get_all_markets.rs  process_get_book_levels.rs  process_get_full_book.rs  process_get_maker_fill_transaction_history.rs  process_get_market.rs  process_get_market_status.rs  process_get_open_orders.rs  process_get_place_transaction_history.rs  process_get_reduce_transaction_history.rs  process_get_seat_info.rs  process_get_taker_fill_transaction_history.rs  process_get_top_of_book.rs  process_get_traders_for_market.rs  process_get_transaction.rs  process_get_transaction_history.rs  process_mint_tokens.rs  process_mint_tokens_for_market.rs  process_request_seat.rs
