cargo-features = ["workspace-inheritance"]

[package]
name = "phoenix-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
clap = { version = "4.0.26", features = ["derive"] }
phoenix-sdk = { git = "https://github.com/Ellipsis-Labs/phoenix-sdk" }
lib-sokoban = "0.2.4" 
shellexpand = "2.1.2"
solana-sdk = "1.10.32"
ellipsis-client = "0.1.9"
solana-client = "1.10.32"
solana-account-decoder = "1.14.7"
borsh = "0.9.3"
tokio = { version = "1.8.4", features = ["full"] }
rand = "0.7.3"
spl-token = { version = "3.2.0", features = ["no-entrypoint"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
spl-associated-token-account = { version = "1.1.1", features = [ "no-entrypoint" ] } 
phoenix-types = { git = "https://github.com/Ellipsis-Labs/phoenix-types" }
devnet-token-faucet = { git = "https://github.com/Ellipsis-Labs/devnet-token-faucet" }